# starterkit

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/output/: combined_data.xlsx
src/: main.py
src/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
